projects/compiler/test/parser/tuples_error_no_comma.out
Error at %FILE_NAME%:1:4
Unexpected token 'identifier', expected one of ',', ')':
  |  (a b)
        ^